<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_lblNum1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNumber1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:ems="10"
            android:hint="@string/str_hint"
            android:inputType="numberSigned"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_lblNum2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:ems="10"
            android:hint="@string/str_hint"
            android:inputType="numberSigned"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_lblNum3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNumber3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:ems="10"
            android:hint="@string/str_hint"
            android:inputType="numberSigned"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtMenor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:ems="10"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textColor="@color/color_restultado"
            android:textSize="60sp" />

        <EditText
            android:id="@+id/txtMedio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:ems="10"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textColor="@color/color_restultado"
            android:textSize="60sp" />

        <EditText
            android:id="@+id/txtMayor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:ems="10"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textColor="@color/color_restultado"
            android:textSize="60sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMenor"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBtn_MenorMayor"
            android:text="@string/str_btn_menor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnMayor"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBtn_MenorMayor"
            android:text="@string/str_btn_mayor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAsc"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBtn_AscDesc"
            android:text="@string/str_btn_asc"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnDesc"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBtn_AscDesc"
            android:text="@string/str_btn_desc"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorBtn_borrar"
        android:text="@string/str_btn_Borrar"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="0dp" />

</LinearLayout>